--- a/Views/Animais/Create.cshtml
+++ b/Views/Animais/Create.cshtml
@@ -48,10 +48,23 @@
                 <label class="control-label">Foto do Animal</label>
                 <input type="file" name="arquivoFoto" class="form-control" accept=".jpg,.jpeg,.png,.gif" />
             </div>
-            <div class="form-group">
-                <label asp-for="TutorId" class="control-label"></label>
-                <select asp-for="TutorId" class ="form-control" asp-items="ViewBag.TutorId"></select>
-            </div>
+           <div class="form-group">
+    <label class="control-label">Tutor (Dono)</label>
+
+    @if (ViewBag.NomeTutorPreSelecionado != null)
+    {
+        <input type="text" class="form-control" value="@ViewBag.NomeTutorPreSelecionado" readonly style="background-color: #e9ecef;" />
+        
+        <input type="hidden" asp-for="TutorId" />
+    }
+    else
+    {
+        <select asp-for="TutorId" class="form-control" asp-items="ViewBag.TutorId">
+            <option value="">-- Selecione o Tutor --</option>
+        </select>
+    }
+    <span asp-validation-for="TutorId" class="text-danger"></span>
+</div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
